# media-mcp

./: .gitignore  README.md  app.py  client.py  config.json  file_ops.py  log.txt  pyproject.toml  requirements.txt  search_web.py
client/: agent.py
config/: config.json  settings.py
servers/: file_ops.py  image_search.py  search_web.py
utils/: image_search_utils.py
