[project]
name = "mediamcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "ddgs>=9.5.5",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.7",
    "mcp>=1.14.0",
    "nltk>=3.9.1",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
]
