[project]
name = "mediamcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.1.0",
    "ddgs>=9.5.5",
    "faiss-cpu>=1.12.0",
    "imagehash>=4.3.2",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.7",
    "mcp>=1.14.0",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "sentencepiece>=0.2.1",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
